...
                verticalArrangement = Arrangement.spacedBy(16.dp),
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                ModernInput(
                    value = viewModel.email,
                    onValueChange = viewModel::onEmailChanged,
                    label = "E-mail ou Login",
                    placeholder = "seu@email.com",
                    keyboardOptions = KeyboardOptions(
                        keyboardType = KeyboardType.Email,
                        imeAction = ImeAction.Next
                    )
                )

                ModernInput(
                    value = viewModel.password,
                    onValueChange = viewModel::onPasswordChanged,
                    label = "Senha",
                    placeholder = "********",
                    visualTransformation = if (passwordVisible) VisualTransformation.None else PasswordVisualTransformation(),
                    trailingIcon = {
                        val image = if (passwordVisible) Icons.Default.Visibility else Icons.Default.VisibilityOff
                        IconButton(onClick = { passwordVisible = !passwordVisible }) {
                            Icon(imageVector = image, contentDescription = null, tint = Color.Gray)
...
